# WebKit

./: .gitignore  .wkdev-sdk-version  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.android  Dockerfile.freebsd  Dockerfile.musl  Dockerfile.windows  Introduction.md  PR_NOTES.md  ReadMe.md  a.patch  android-release.sh  arm64-windows-static.cmake  build-icu.ps1  build.ts  jit_crash_test.js  jsc.md  mac-release-local.bash  mac-release.bash  minimal_jit_crash.js  musl-release.sh  release.sh  tsan.sh  ubsan.sh  windows-cross-release.sh  windows-release-vcpkg.ps1  windows-release.ps1
.bun/: ICU-README.md  ICUDataLoader.c  ICULoader.h  README.md.template  build-icu-data.sh  build-jsc-with-icu.sh  create-bun-builds.sh  create-small-icu-bun.sh  create-small-icu-data.sh  filter-small-icu.sh  icu-filter.json  replace-icu-data.sh
.github/: CODEOWNERS
Configurations/: CommonBase.xcconfig  Version.xcconfig  WebKitProjectPaths.xcconfig
JSTests/: microbenchmarks.yaml  wasm.yaml
LayoutTests/: TestExpectations  tests-options.json
Source/WTF/: CMakeLists.txt
Source/WTF/Configurations/: WTF.xcconfig
Source/WTF/SaferCPPExpectations/: ForwardDeclCheckerExpectations
Source/WTF/Scripts/: generate-unified-source-bundles.py
Source/WTF/Scripts/Preferences/: UnifiedWebPreferences.yaml
Source/WTF/Scripts/modules-verifier/: VerifyModuleTask.py  library-modules-verifier.py
Source/WTF/WTF.xcodeproj/: project.pbxproj
Source/WTF/wtf/: Assertions.cpp  Assertions.h  Atomics.h  AutomaticThread.cpp  AutomaticThread.h  AvailableMemory.cpp  BitSet.h  BlockPtr.h  CMakeLists.txt  CagedPtr.h  CheckedRef.h  CodePtr.h  CompactPointerTuple.h  Compiler.h  ConcurrentBuffer.h  ConcurrentPtrHashSet.h  ConcurrentVector.h  CrossThreadTaskHandler.cpp  CrossThreadTaskHandler.h  CurrentThread.cpp  CurrentThread.h  DataLog.cpp  DataMutex.h  DeferrableRefCounted.h  DoublyLinkedList.h  ExponentialMovingAverage.cpp  ExponentialMovingAverage.h  FastBitVector.h  FastTLS.h  FileHandle.h  FileSystem.cpp  FlipBytes.h  Float16.h  Forward.h  FunctionPtr.h  FunctionTraits.h  Gigacage.h  HashFunctions.h  Int128.h  LockAlgorithmInlines.h  (+62 more)
Source/WTF/wtf/bun/: RunLoopBun.cpp
Source/WTF/wtf/cf/: CFTypeTraits.h
Source/WTF/wtf/cocoa/: NSTypeTraits.h  RuntimeApplicationChecksCocoa.h  RuntimeApplicationChecksCocoa.mm
Source/WTF/wtf/generic/: RunLoopGeneric.cpp  WorkQueueGeneric.cpp
Source/WTF/wtf/glib/: FileSystemGlib.cpp
Source/WTF/wtf/highway/hwy/: base.h
Source/WTF/wtf/posix/: OSAllocatorPOSIX.cpp  ThreadingPOSIX.cpp
Source/WTF/wtf/text/: ASCIIFastPath.h  ASCIILiteral.h  AtomStringImpl.cpp  AtomStringImpl.h  AtomStringTable.cpp  ExternalStringImpl.cpp  ExternalStringImpl.h  RapidHash.h  SharedAtomStringTable.cpp  SharedAtomStringTable.h  StringBuilderJSON.h  StringCommon.cpp  StringCommon.h  StringCommonHighway.cpp  StringHasher.h  StringHasherInlines.h  StringImpl.cpp  StringImpl.h  SymbolRegistry.cpp  TextStream.cpp  TextStream.h  WTFString.h
Source/WTF/wtf/threads/: Signals.cpp
Source/WTF/wtf/win/: OSAllocatorWin.cpp  RunLoopWin.cpp  ThreadingWin.cpp
Source/bmalloc/libpas/: CMakeLists.txt
Source/bmalloc/libpas/libpas.xcodeproj/: project.pbxproj
Source/bmalloc/libpas/src/libpas/: jit_heap_config.c  jit_heap_config.h  pas_all_heap_configs.h  pas_all_heaps.c  pas_bitfit_allocator.c  pas_bitfit_directory.c  pas_bitfit_heap.c  pas_bitfit_page_inlines.h  pas_bitfit_size_class.c  pas_bitfit_view.c  pas_commit_span.c  pas_commit_span.h  pas_compact_heap_reservation.c  pas_config.h  pas_create_basic_heap_page_caches_with_reserved_memory.c  pas_deferred_decommit_log.c  pas_enumerate_large_heaps.c  pas_expendable_memory.c  pas_free_granules.c  pas_heap.c  pas_heap_config.h  pas_heap_config_utils.h  pas_immortal_heap.c  pas_internal_config.h  pas_large_free_heap_deferred_commit_log.c  pas_large_free_heap_helpers.c  pas_large_heap.c  pas_large_heap_physical_page_sharing_cache.c  pas_large_heap_physical_page_sharing_cache.h  pas_large_map.c  pas_large_sharing_pool.c  pas_large_sharing_pool.h  pas_large_virtual_range.h  pas_local_allocator.c  pas_lock.h  pas_malloc_stack_logging.c  pas_medium_megapage_cache.c  pas_megapage_cache.c  pas_monotonic_time.c  pas_mte.h  (+18 more)
Source/bmalloc/libpas/src/test/: BitfitTests.cpp  IsoHeapPageSharingTests.cpp  LargeFreeHeapTests.cpp  LargeSharingPoolTests.cpp  ReallocFastPathTests.cpp  ScavengerExternalWorkTests.cpp  TLCDecommitTests.cpp  TestHarness.cpp  ThreadSuspenderTests.cpp
TestExpectations/: apitests
Tools/: CMakeLists.txt  PlatformGTK.cmake
icu/: hot-items.txt  (+7 more)
(+5253 files in other folders)
